[package]
name = "ansible-vault"
description = "decrypt ansible vault 1.1 files"
version = "0.1.3"
authors = ["Wouter Geraedts <wouter@tweedegolf.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tweedegolf/ansible-vault-rs"

[dependencies]
base16 = "0.2.1"
hmac = "0.10.1"
sha2 = "0.9.3"
pbkdf2 = "0.7.3"
aes-ctr = "0.6.0"
block-padding = "0.2.1"
rand = "0.8.3"
thiserror = "1.0.24"
