[package]
name = "ansible-vault"
description = "encrypt and decrypt ansible vault"
version = "0.2.0"
authors = ["Wouter Geraedts <wouter@tweedegolf.com>", "darlaam <darlaam@pm.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tweedegolf/ansible-vault-rs"
keywords = ["ansible", "crypto"]
categories = ["cryptography", "encoding"]

[dependencies]
hmac = "0.10.1"
sha2 = "0.9.3"
pbkdf2 = "0.7.2"
aes-ctr = "0.6.0"
block-padding = "0.2.1"
hex = "0.4.2"
rand = "0.8.0"
