[package]
name = "ansible-vault"
description = "encrypt and decrypt ansible vault"
version = "0.2.1"
authors = ["Wouter Geraedts <wouter@tweedegolf.com>", "darlaam <darlaam@pm.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tweedegolf/ansible-vault-rs"
keywords = ["ansible", "crypto"]
categories = ["cryptography", "encoding"]

[dependencies]
hmac = "0.10"
sha2 = "0.9"
pbkdf2 = "0.7"
aes-ctr = "0.6"
block-padding = "0.2"
hex = "0.4"
rand = "0.8"
